# jerasure

./: .gitmodules  CMakeLists.txt  configure.ac  make_mingw64.sh
Examples/: cauchy_02.c  cauchy_03.c  cauchy_04.c  encoder.c  jerasure_05.c  jerasure_06.c  jerasure_07.c  jerasure_08.c  liberation_01.c  reed_sol_test_gf.c  reed_sol_time_gf.c
src/: Makefile.am  cauchy.c  cauchy_best_r6.c  jerasure.c  liberation.c  reed_sol.c
